@@ -43,7 +43,6 @@ Le |Na+| est l'ion sodium.
 """],
 ["""\
 Test directive containing english role superscript.
-BUG 1830380: the ERROR is an ERROR and the WARNING a followup to the ERROR
 
 .. |Na+| remplace:: Na\ :sup:`+`
 
@@ -53,25 +52,19 @@ Le |Na+| est l'ion sodium.
 <document source="test data">
     <paragraph>
         Test directive containing english role superscript.
-        BUG 1830380: the ERROR is an ERROR and the WARNING a followup to the ERROR
-    <system_message level="1" line="4" source="test data" type="INFO">
+    <system_message level="1" line="3" source="test data" type="INFO">
         <paragraph>
             No role entry for "sup" in module "docutils.parsers.rst.languages.fr".
             Using English fallback for role "sup".
-    <system_message level="3" line="4" source="test data" type="ERROR">
-        <paragraph>
-            Error in "remplace" directive: may contain a single paragraph only.
-    <system_message level="2" line="4" source="test data" type="WARNING">
-        <paragraph>
-            Substitution definition "Na+" empty or invalid.
-        <literal_block xml:space="preserve">
-            .. |Na+| remplace:: Na\\ :sup:`+`
+    <substitution_definition names="Na+">
+        Na
+        <superscript>
+            +
     <paragraph>
         Le \n\
         <substitution_reference refname="Na+">
             Na+
-         est l\'ion sodium.
-"""],
+         est l\'ion sodium."""],
 ]
 
 
